# labelImg

./: labelImg.py  pyproject.toml  setup.py
libs/: canvas.py  shape.py
resources/strings/: strings-ja-JP.properties  strings-zh-CN.properties  strings-zh-TW.properties  strings.properties
