[build-system]
requires = ["setuptools>=64", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.commands]
egg_info = ["python setup.py build_resources"]
sdist = ["python setup.py build_resources"]
bdist_wheel = ["python setup.py build_resources"]
develop = ["python setup.py build_resources"]
